[gd_scene load_steps=8 format=3 uid="uid://bxw4bpqa7mxw7"]

[ext_resource type="Script" path="res://Scenes/turrets/slowTurret/slowTurret.gd" id="1_4ay1g"]
[ext_resource type="Texture2D" uid="uid://c485hf8kfjsd5" path="res://Assets/turrets/ice_monke.png" id="2_txw7q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_aicnu"]
radius = 22.8

[sub_resource type="CircleShape2D" id="CircleShape2D_kae7m"]
radius = 230.11

[sub_resource type="Animation" id="Animation_safe7"]
resource_name = "fire"
length = 0.5
step = 0.0667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Monkey:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2001, 0.2668, 0.3335, 0.4002),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 2, 4, 3, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_wkh71"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Monkey:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ot74p"]
_data = {
"RESET": SubResource("Animation_wkh71"),
"fire": SubResource("Animation_safe7")
}

[node name="Turret" type="Node2D"]
script = ExtResource("1_4ay1g")

[node name="Monkey" type="Sprite2D" parent="."]
z_index = 2
texture_filter = 1
rotation = 1.5708
scale = Vector2(0.088, 0.088)
texture = ExtResource("2_txw7q")
vframes = 5

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
shape = SubResource("CircleShape2D_aicnu")

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_kae7m")

[node name="LaunchPoint" type="Node2D" parent="."]
z_index = 5
position = Vector2(35, 31)

[node name="AttackCooldown" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ot74p")
}

[connection signal="area_entered" from="AttackRange" to="." method="_on_attack_range_area_entered_slo"]
[connection signal="area_exited" from="AttackRange" to="." method="_on_attack_range_area_exited_slo"]
[connection signal="timeout" from="AttackCooldown" to="." method="attack"]
